objects/Vehicle_Interest__c.object
<CustomObject>
    <fields>
        <fullName>Buyer_Opportunity_ID__c</fullName>
        <label>Buyer Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value is not a Buyer Opportunity</errorMessage>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Buyer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Vehicle Interests</relationshipLabel>
        <relationshipName>Vehicle_Interests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Buyer_Opportunity_Owner__c</fullName>
        <formula>Buyer_Opportunity_ID__r.Owner.FirstName + &quot; &quot; + Buyer_Opportunity_ID__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Opportunity_Text__c</fullName>
        <formula>Buyer_Opportunity_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Opportunity Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_If_Deposit_Falls_Through__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact If Deposit Falls Through</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_On_Price_Drop__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contact On Price Drop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_When_Available_For_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact When Available For Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_Financing_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://shiftcars1.appspot.com/admin/get_financing_link/&quot; &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(CASESAFEID(Vehicle_ID__c), &quot;%&quot;, &quot;%25&quot;), &quot;&amp;&quot;, &quot;%26&quot;), &quot;?&quot;, &quot;%3F&quot;) &amp; &quot;/&quot; &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(CASESAFEID(Buyer_Opportunity_ID__r.Account.Id), &quot;%&quot;, &quot;%25&quot;), &quot;&amp;&quot;, &quot;%26&quot;), &quot;?&quot;, &quot;%3F&quot;), &quot;Generate financing link&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Financing Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_Shift_Financing_Link__c</fullName>
        <description>Generate link to the Shift captive financing application (not to be confused with third-party financing page)</description>
        <formula>HYPERLINK(&quot;https://shiftcars1.appspot.com/admin/get_financing_link/&quot; &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(CASESAFEID(Vehicle_ID__c), &quot;%&quot;, &quot;%25&quot;), &quot;&amp;&quot;, &quot;%26&quot;), &quot;?&quot;, &quot;%3F&quot;) &amp; &quot;/&quot; &amp; SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(CASESAFEID(Buyer_Opportunity_ID__r.Account.Id), &quot;%&quot;, &quot;%25&quot;), &quot;&amp;&quot;, &quot;%26&quot;), &quot;?&quot;, &quot;%3F&quot;) &amp; &quot;?for=shift&quot;, &quot;Generate Shift financing link&quot;)</formula>
        <label>Generate Shift Financing Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Source_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Migration Source ID</label>
        <referenceTo>Migration_Source__c</referenceTo>
        <relationshipName>Buyer_Interests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Tree_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration Tree ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Test_Drive_Cancelled__c</fullName>
        <formula>Test_Drive_Count_Cancelled__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Drive Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Drive_Count_Cancelled__c</fullName>
        <label>Test Drive Count Cancelled</label>
        <summaryFilterItems>
            <field>Test_Drive__c.Canceled__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_Drive__c.Vehicle_Interest_ID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Test_Drive_Count__c</fullName>
        <label>Test Drive Count</label>
        <summaryForeignKey>Test_Drive__c.Vehicle_Interest_ID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Test_Drive__c</fullName>
        <formula>Test_Drive_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Drive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Detail_URL__c</fullName>
        <formula>Vehicle_ID__r.Detail_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Detail URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vehicle</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Vehicle Interests</relationshipLabel>
        <relationshipName>Vehicle_Interests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Vehicle Interest</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Vehicle Interest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Interests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>